# DwgFinder

./: .gitignore  .gitmodules  config.json  initdb.py  pyproject.toml  readme.md
CountEntity/: CountEntity.def  CountEntity.rc  CountEntity.sln  CountEntity.vcxproj  CountEntity.vcxproj.filters  CountEntityApp.cpp  CountEntityApp.h  CountEntityCmd.cpp  CountEntityCmd.h  CountEntityResult.cpp  CountEntityResult.h  Resource.h  classInfo.cpp  classInfo.h  helloworld.cpp  pch.h  rxentrypoint.cpp
CountEntity/res/: CountEntity.rc2
DwgFinder/: common.py  main.py  reader.py  watcher.py  worker.py  zwcad.py
DwgFinder/uiautomation/: uiautomation.py
DwgRead/: AssocObjectReader.cpp  AssocObjectReader.h  CountEntityReader.cpp  CountEntityReader.h  DbReader.h  DbReaderManager.cpp  DbReaderManager.h  DumbReader.cpp  DumbReader.h  DwgRead.sln  DwgRead.vcxproj  DwgRead.vcxproj.filters  DynBlockReader.cpp  DynBlockReader.h  FindGroupReader.cpp  FindGroupReader.h  NamedObjectDictReader.cpp  NamedObjectDictReader.h  NestedBlockLevelReader.cpp  NestedBlockLevelReader.h  SymbolTableReader.cpp  SymbolTableReader.h  env.cpp  env.h  main.cpp
Scripts/: initdb.py
WebServer/: __init__.py  common.py  db.py  pagination.py
WebServer/static/css/: main.css
WebServer/templates/: base.html  index.html  result.html
