[tool.poetry]
name = "dwgfinder"
version = "0.1.0"
description = "Tool for finding Dwg files efficiently."
authors = ["刘裕 <liuyu@zwcad.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
comtypes = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
