[tool.poetry]
name = "dwgfinder"
version = "0.1.0"
description = "Tool for finding Dwg files efficiently."
authors = ["刘裕 <liuyu@zwcad.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
comtypes = "^1.1"
psutil = "^5.9.4"
watchdog = "^2.2.1"
pywin32 = "^305"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
