[tool.poetry]
name = "dwgfinder"
version = "0.2.0"
description = "Tool for finding Dwg files efficiently."
authors = ["刘裕 <liuyu@zwcad.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^2.2.1"
flask = "^2.2.3"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
